Create initial setup and tests for e2e tests for the client.